--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ body{
 }
 header{
     width: 100%;
-    height: 25vh;
+    height: 230px;
     background-color: white;
 }
 .logo-container{
@@ -94,6 +94,7 @@ main h2{
     color: white;
     margin-bottom: 30px;
     border-radius: 15px;
+    cursor: pointer;
 }
 .day-name{
     margin-top: 30px;
@@ -173,8 +174,66 @@ nav ul li a{
 .active{
     color: #047A9C;
 }
-
-
+.popup{
+    width: 100%;
+    height: auto;
+    position: absolute;
+    z-index: 2;
+    background-color: #F1F1F1;
+    opacity: 0.99;
+    display: none;
+}
+.popup .fa-times{
+    position: absolute;
+    right: 40px;
+    top: 30px;
+    font-size: 50px;
+    cursor: pointer;
+    z-index: 2;
+}
+.popup .content{
+    position: relative;
+    top: 60px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.popup .hours{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 50px
+}
+.popup .hour{
+    position: relative;
+    width: 100%;
+    height: auto;
+    border-top: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+.popup .hour .icon{
+    width: 60px;
+    height: 100%;
+    
+}
+.popup .hour .time{
+    width: auto;
+    height: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 20px;
+}
+.popup .hour .iconInfo{
+    width: auto;
+    height: 100%;
+    margin-right: 20px;
+}
+.popup .hour .temp{
+    width: auto;
+    height: 100%;
+}
 
 @media only screen and (min-width: 700px) {
     .weather-cards{
